Add more test cases with uninitialized parameters